fix invisible overflow data

--- a/src/App.css
+++ b/src/App.css
@@ -26,10 +26,10 @@ body {
 }
 .todos{
   outline:solid black 5px;
-  overflow: scroll;
+  overflow: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   
   height: 26rem;
@@ -75,8 +75,7 @@ body {
   margin-left: 2rem;
   font-size: xx-large;
   font-weight: 600;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding:0 1rem 0.5rem 1rem;  
 }
 
 .remain-container {
